--- a/cmsc320-etymology-project.ipynb
+++ b/cmsc320-etymology-project.ipynb
@@ -2809,6 +2809,17 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "H0: There is no difference between the distribution of what languages the top 2000 loanwords have been borrowed from, the distribution of languages the top 2000-4000 loanwords have been borrowed from, and the distribution of languages loanwords other than the top 4000 have been borrowed from.\n",
+        "\n",
+        "HA: There is a difference between the distribution of what languages the top 2000 loanwords have been borrowed from, the distribution of languages the top 2000-4000 loanwords have been borrowed from, and the distribution of languages loanwords other than the top 4000 have been borrowed from.\n"
+      ],
+      "metadata": {
+        "id": "uwPNHOHB0BIe"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df = pd.read_csv('etymology.csv')\n",
@@ -3553,6 +3564,17 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "H0: There is no difference in the amount of language relations for more frequently used English words.\n",
+        "\n",
+        "Ha: More frequently used English words have a significantly different (more or less) amount of language relations.\n"
+      ],
+      "metadata": {
+        "id": "3L2qElF60E9b"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Hypothesis #2\n",
@@ -3717,7 +3739,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 524
         },
         "id": "Krjnw4lSxxia",
         "outputId": "18955ac6-5a6b-4135-cb1e-7ca90ad583b8"
@@ -3769,6 +3791,18 @@
       ],
       "metadata": {
         "id": "mi3DSXEmx9R7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "H0: The distribution of relationship types in the dataset is uniform\n",
+        "\n",
+        "HA: The distribution of relationship types in the dataset is not uniform.\n",
+        "Test: chi-square test for independence\n"
+      ],
+      "metadata": {
+        "id": "prk5pTpa0Jy4"
       }
     },
     {
@@ -3870,6 +3904,17 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Conclusion for test 3**\n",
+        "\n",
+        "We reject the null hypothesis that the distribution of relationship types is uniform. There is extremely strong statistical evidence to support the alternative hypothesis that the relationship types are not equally distributed in the dataset."
+      ],
+      "metadata": {
+        "id": "nRx74kpK0Mr8"
+      }
     }
   ]
 }
