--- a/cmsc320-etymology-project.ipynb
+++ b/cmsc320-etymology-project.ipynb
@@ -1884,6 +1884,15 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Conclusion for Hypothesis #1:**\n",
+        "\n",
+        "Since the p value is 1, we fail to reject the null hypothesis. There is no significant evidence to prove that there is a difference between the distribution of what languages the top 2000 loanwords have been borrowed from, the distribution of languages the top 2000-4000 loanwords have been borrowed from, and the distribution of languages loanwords other than the top 4000 have been borrowed from."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "tC-aXY7ayB9C"
       },
@@ -2284,7 +2293,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.14"
+      "version": "3.11.9"
     }
   },
   "nbformat": 4,
