--- a/cmsc320-etymology-project.ipynb
+++ b/cmsc320-etymology-project.ipynb
@@ -4089,6 +4089,15 @@
     "# sphinx_gallery_thumbnail_number = 2\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Conclusion of ML for lanuage region prediction**\n",
+    "\n",
+    "[conclusion here]"
+   ]
   }
  ],
  "metadata": {
