--- a/cmsc320-etymology-project.ipynb
+++ b/cmsc320-etymology-project.ipynb
@@ -21,6 +21,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Introduction \n",
+    "\n",
+    "Our project is based on etymology. Etymology is defined as the study of the origin of words. This means how language and words change throughout history. The purpose of this project is to find relationships between the orgins of words and the languages that the words come from. Some questions we will try to answer in this project are can we predict the language or group of languages an english word may orginiate from? Is there a correlation between the frequency of words and the number of relationships that word has with other languages? Can we predict the region in which a given english word is from? Do the relationship types that appear in the words form a uniform distribution? By using statistical methods and machine learning techniques we learned in class we may be able to shed light on many of these questions and reveal new questions to be investigated in the future. \n",
+    "\n",
+    "This is important as we analyze the patterns in how words have evolved over time, we can discover how major languages have spread and influenced language around the world throughout history. The project will help us also learn more about how new words emerge as a response to major events, technological changes, and societal changes. We also aim to highlight the interconnectedness of language and geography throughout the world. The information we gain from this could also in the future be used as a resource for NLP (Natural Lanugage Processing), improving machine translation, and the creation of multilingual applications. "
+   ]
+  },
+  {
    "cell_type": "raw",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -58,16 +69,28 @@
     "id": "4N27j-y7yI6H"
    },
    "source": [
-    "# Initial Exploration"
+    "# Initial Exploration / Data Collection + Pre-processing \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***[insert explanation on purpose of exploration stage, particularly in our own process relating to understanding the structure of etymological relationships]***\n",
     "\n",
-    "--throughout this section where it seems appropriate add a small section explaining what is occuring and why (how are we exploring/cleaning the database and such)"
+    "We sought to look for a dataset that was mostly clean, had enough data, and is informative enough to extrapolate information from. This is to to minimize data pre-processing and maximize our accuracy in later machine learning analyses. We found such a dataset on the Kaggle website https://www.kaggle.com/datasets/bilalelebi/dataset?select=etymology.csv. The etymology dataset has almost four million entries of words, the term column tells us the word, the lang column tells us the language that word belongs to, the related_term column tells us what term is closesly related to the word in that entry, the related_lang column tells us the language in which the related word for that word is from, and the reltype column tells us the type of relationship that word has with its related_term. \n",
+    "\n",
+    "Another dataset we used to factor in word frequencies is the unigram_freq dataset https://www.kaggle.com/datasets/rtatman/english-word-frequency. This dataset contains the top 333,333 most used words in the english language, created from the Google Word Trillion Word Corpus. This dataset allows us to incorporate the frequency of a word into our below analyses and extrapolate trends or relationships of words and languages based on the frequency of the word. \n",
+    "\n",
+    "In this section of the notebook we explore and clean the dataset by looking at all of the features in each dataset and determine the features that are most relevant to our questions. We extrapolate information like, all unique relationship types, the number of times each language is borrowed with respect to english words. In this section we also add visualizations and the creation of more features and dataframes that contain more informative values. \n",
+    "\n",
+    "This section is meant to help us understand the datasets initially and determine if there are any other questions that arise from our exploration and manipulation of the data. This section also compiles the data from the two datasets to create a dataframe that contains information from both while removing useless features, giving us a dataframe that will be extemely helpful in answering our questions. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Importing data processing libraries and plotting tools, reading in and displaying the raw etymology data.***"
    ]
   },
   {
@@ -348,6 +371,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***The raw features in the etymology dataset.***"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
@@ -381,6 +411,13 @@
    ],
    "source": [
     "etymology.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Create dataframe to capture all words from the english language and drop columns that we do not use.***"
    ]
   },
   {
@@ -540,6 +577,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Find all types of relationships between words.***"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
@@ -581,6 +625,13 @@
    "source": [
     "engl['related_lang'].value_counts().median()\n",
     "engl['reltype'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Find how many times each language is borrowed from english words, create an other category for languages that are borrowed from a lot less.***"
    ]
   },
   {
@@ -650,6 +701,13 @@
     "other = pd.Series({'Other': engl[(engl['reltype'] == 'borrowed_from')]['related_lang'].value_counts()[engl['related_lang'].value_counts() < 150].sum()})\n",
     "piechart_series = pd.concat([piechart_lst, other])\n",
     "piechart_series"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Plot the frequencies of borrowed languages as a pie chart.***"
    ]
   },
   {
@@ -1089,6 +1147,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Create dataframe from the unigram frequency dataset***"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
@@ -1212,6 +1277,13 @@
     "freqs = pd.read_csv('unigram_freq.csv')\n",
     "freqs.set_index('word', inplace = True)\n",
     "freqs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Join the etymology and unigram frequency dataframes and having count remain the same as in the unigram frequency dataframe and add a frequency column that gives the percentage that a word is used in the english language.***"
    ]
   },
   {
@@ -1420,7 +1492,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***[provide small explanation of what this hypothesis explores and how, i.e. the question of if there is a difference in language borrowing patterns between high-frequency and low-frequency words]***"
+    "***This hypothesis explores the possibility if words with high vs low frequency have large differences in which languages they are borrowing from. We determine the hypothesis by extrapolating borrowed from relationships and splitting the data into high medium and low frequency word displaying each type of frequency's language distribution using a piechart. Then using an foneway test we can determine if there is a statistical and meaningful difference between those distribution among the frequency levels.***"
    ]
   },
   {
@@ -1432,6 +1504,13 @@
     "H0: There is no difference between the distribution of what languages the top 2000 loanwords have been borrowed from, the distribution of languages the top 2000-4000 loanwords have been borrowed from, and the distribution of languages loanwords other than the top 4000 have been borrowed from.\n",
     "\n",
     "HA: There is a difference between the distribution of what languages the top 2000 loanwords have been borrowed from, the distribution of languages the top 2000-4000 loanwords have been borrowed from, and the distribution of languages loanwords other than the top 4000 have been borrowed from.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Read in etymology dataset and create dataset of only relationship types of borrowed from.***"
    ]
   },
   {
@@ -1695,6 +1774,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Split the dataframe from above into the highest 2,000 frequency words, the next highest 2,0000 frequency words, and every word after 4,000 (we do it in this way as the total frequency of words after the highest 4,0000 is much less even though there might be more words in that category). Also create an other category to capture all languages where they are borrowed from less than 15 times to make the chart more understandable.***"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
@@ -1720,6 +1806,13 @@
     "other_lst = other_counts[other_counts >= 20]\n",
     "other_other = pd.Series({'Other': other_counts[other_counts < 20].sum()})\n",
     "other_series = pd.concat([other_lst, other_other])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Plot the highest frequency words distribution.***"
    ]
   },
   {
@@ -1760,6 +1853,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Plot the medium frequency words distribution***"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
@@ -1794,6 +1894,13 @@
    ],
    "source": [
     "top_4000_series.plot.pie(figsize = (10, 10), title = 'Number of The Top 2000-4000 English Loanwords Borrowed from Each Language', fontsize = 8)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Plot the lowest frequency words distribution***"
    ]
   },
   {
@@ -1837,7 +1944,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***[provide explanation of why we used an f_oneway test here and what they are used to show]***"
+    "***We use a f_oneway test which is an implementation of an one way anova test which determines the differences in groups. It calculates an f-statistic that looks at the variance of the data between groups and utilizes that to quantify a p-value which we can use to either reject or fail to reject our null hypothesis.***"
    ]
   },
   {
@@ -1927,7 +2034,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***[provide small explanation of what this hypothesis explores and how, i.e. the question of if frequently used English words have more language relations within the database -> why might we want to explore this in terms of database quality testing and informing our other testing results]***"
+    "This hypothesis determines if there is a difference in the number of total language relations a word has based on that words frequency. We do this by using the etymology and unigram frequency datasets in conjunction and doing statistical tests on the frequency vs the # of related languages. This will tell us if more commonly used words differ in the amount of languages that they are related to vs less commonly used words. This will be useful for future analysis as we will later look into prediciting the language a word originates from and knowing if there is a correlation between frequency and the number of languages related may help us to improve accuracy in our machine learning steps below. "
    ]
   },
   {
