--- a/cmsc320-etymology-project.ipynb
+++ b/cmsc320-etymology-project.ipynb
@@ -2049,6 +2049,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Read in etymology and unigram frequency datasets and get english words from etymology and create a dataframe that shows each words number of related languages. Merge this with the unigram frequency dataframe. We then use the frequency as the x variable and the number of related languages of the y variable and use seaborn and matplotlib to create a scatter plot with a correlation line to visualize the relationship.***"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
@@ -2121,14 +2128,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***[explanation on what the above visual shows, i.e. the significance of calculating correlation between word frequency and number of word relations to drawing a conclusion in this hypothesis]***"
+    "The above visualization and correlation score of 0.12 tell us that the correlation is not very strong between the two variables."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***[explanation on how splitting data into frequency groups + how the below code is performing t-tests and distribution analysis. Include why we chose a t-test for this hypothesis]***"
+    "We split the data into frequency groups to categorize the words into high and low frequency groups, we do this by finding the median frequency for all words and split words based on that median. Next we choose to perform a t-test because we know that high and low frequency words should be in a uniform distribution and both are independent of each other by comparing the means of each group. The t-test is performed using the scripy.stats ttest method and we plot each group (high and low frequency) and showing the mean of both groups to visualize the differences using the axvline and the kdeplot method. "
    ]
   },
   {
@@ -2193,14 +2200,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***[explanation on above visual, significance to the hypothesis, etc.]***"
+    "***The visualization above has the number of related languages on the x-axis, and the denisty of words that have that number of related languages on the y-axis the dotted lines represent the mean of each group. The t-test statistic score is very high (78.69) which tells us that there is a large statistical difference between the data. The p-value being 0 tells us we should reject our null hypothesis.***"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***[explanation on importance of cleaning data based on issues found in analysis above then testing again]***"
+    "We see that there are large differences in the groups of data so we will try to refine and clean our data to see if we can get a different or more clarifying result. We do this by removing outliers using quartiles and removing data that is outside 1.5 times the interquartile range which essentially is removing data that is either very low frequency or very high frequency that may affect our results. After removing these points we again split the data into high and low frequency then compute the correlation (strength of relationship) and perform the ttest again. "
    ]
   },
   {
@@ -2273,7 +2280,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***[explanation on differences in results and plots between the two testing sections]***"
+    "***The results differ in that we get a lower T-statistic score however the score is still high and we get a larger correlation value, this tells us that maybe with more cleaning and refining there may be increased correlations however we still see that there is a significant difference in the means of the two groups and still not a very strong correlation. The visualization shows that the mean lines are slightly closer which follows the T-statistic value being lower.***"
    ]
   },
   {
@@ -2306,7 +2313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***[provide small explanation of what this hypothesis explores and how, i.e. the question of if different types of etymological relationships equally common, why want want to explore this question, etc.]***"
+    "This hypothesis explores if certain relationship types e.g. \"borrowed from\" are more common than others or if all relationship types are equally as common. We will do this by using a chi-squared test. This is significant as if certain relationship types are dominant we would want to adjust our models in later steps to reflect this insight which will help us create a more accurate and usable model. "
    ]
   },
   {
@@ -2319,6 +2326,13 @@
     "\n",
     "HA: The distribution of relationship types in the dataset is not uniform.\n",
     "Test: chi-square test for independence\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Load in data from etymology dataset and create a table containing the counts of each relationship type from the etymology dataset***"
    ]
   },
   {
@@ -2340,7 +2354,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***[explanation on why we are using a chi-squared test for uniformity and what it should show in the data for this hypothesis]***"
+    "We use a chi-squared test as it is used for comparing categorical data (data that is not numbers but labels) and is helpful for analyzing the distribution of variables such as relationship type this will help us determine if relationship type is independent of the relationship type's frequency."
    ]
   },
   {
@@ -2379,7 +2393,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***[explain the above results printed]***"
+    "The results give us a extremely high chi-square statistic value which tells us that there is a very large difference in the actual distribution when compared to a normal distribution showing that relationship types are not equally as common."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***In this cell we create a distribution to show us which relationship types are more and less common than others and we say that if a relationship type is seen less than 2,000 times we will group them into the other category.***"
    ]
   },
   {
@@ -2439,7 +2460,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***[explanation of utility of bar graph as a visualization here and what it shows of our data, hypothesis, and in relation to the chi-squared statistics]***"
+    "We chose a bar graph to visualize the data as it simplifies the data and makes it extremely easy to read and compare frequencies between different relationship types. Seeing bars of unequal sizes lines up with our results from the chi-squared test as the frequencies of each different type of relationship are vastly different as shown by the differing bar heights, which tells us that we can reject our null hypothesis. "
    ]
   },
   {
@@ -2798,8 +2819,15 @@
    "metadata": {},
    "source": [
     "**K-Fold Cross Validation:**\n",
-    "*   [provide small explanation on k-fold cross validation, below is the notes for this bit provided by whoever made this section, I think it can be kept additionally but you can also reword it]\n",
+    "* In this step we perform k-fold cross validation which splits the data into k number of groups of equal size then trains the model on k-1 groups and tests on the last group. In this case we choose a k value of 5 and therefore we split the data into 5 equal parts, train on 4 and test on one. We repeat this process k (5) times choosing new groups each time. We average the scores from all runs to get our final score.\n",
     "* Accuracies are better compared to individual languages, but this could be due to overfitting. The number of words from Latin based languages are much greater than other language families, so the model would learn patterns of Latin based languages better."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also use 3 different models, KNN which uses the k number of closest neighbors to classify a datapoint, Decision tree which uses a tree like structure and makes decisions based on the features (related languages) of a word to classify it, and a random forest classifier which creates multiple decision trees by choosing groups of the data at random. "
    ]
   },
   {
@@ -2839,6 +2867,13 @@
     "for model_name, model in models.items():\n",
     "    scores = cross_val_score(model, X_train, y_train, cv = skf)\n",
     "    print(model_name + ':\\n' + '\\tMean: ' + str(scores.mean()) + '\\n\\tStandard Deviation: ' + str(scores.std()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Perform one hot encoding which is adding a column for each relationship type and if a word has a relationship type we have 1 in that cell and -1 to represent not having that relationship type. Then we split the data into training and testing sets. "
    ]
   },
   {
@@ -2886,12 +2921,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***[explain the FNN model and how we implement it here, the below text is what was in the notes for this section of the ML work, delete it after you fill in the rest here]***\n",
-    "\n",
-    "FNN Model:\n",
-    "* This model is the same as the MLPClassifier in HW5 but modified for our problem\n",
-    "* Again, this model isn't good at all\n",
-    "* I've tried to improve it by making it more complex but it just ends up (poorly) overfitting"
+    "We next implement an FNN model (Feed-forward Neural Network) which consists of layers each with nodes inside. The first layer (input layer) has nodes that represent the features or attributes of the data. Then the hidden layer(s) which take the data from the input layer and applies mathematical functions to the data to transform them into patterns, and an output layer that receives the output from the hidden layer and outputs a prediction. We implement it using multiple hidden layers each with 32 nodes and an activation function called relu (if above 0 same if below 0 set it to 0)."
    ]
   },
   {
@@ -2920,6 +2950,13 @@
     "\n",
     "# Instantiating the model\n",
     "model = MLPModel(feat_dim, out_dim)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This step runs the FNN applying a loss function to determine how far off we are from the correct label vs our predicted label."
    ]
   },
   {
@@ -2982,6 +3019,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We visualize our loss overtime by creating a line graph of loss over our 1000 iterations."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -3033,7 +3077,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***[explanation of significance of loss tracking results]***"
+    "This graph tells us that our loss is going down the more times we go through the FNN. This means the model is learning well from the data and is slowly becoming more and more accurate telling us that the model is getting better at predicting which language family a word from the english language comes from. "
    ]
   },
   {
