--- a/cmsc320-etymology-project.ipynb
+++ b/cmsc320-etymology-project.ipynb
@@ -3120,10 +3120,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***[explain RNN and how we implement it here moving on from FNN, the below text is what was in the notes for this section of the ML work, delete it after you fill in the rest here but make sure you incorporate the citation either here or mention it with a asteriks marker to mark if you put it on the final list of resources at the bottom instead]***\n",
-    "RNN Model:\n",
-    "* Created following this [PyTorch tutorial](https://pytorch.org/tutorials/intermediate/char_rnn_classification_tutorial) (make sure to cite in final document!)\n",
-    "* This model's accuracy isn't that great either"
+    "RNN is a recurrent neural network. This is slightly different from a FNN as it handles data sequentially and remembers previous input. The way in which it differs from a FNN is that instead of individual data points it goes in order and updates the hidden layers using information that it has learned from previous inputs continously. \n",
+    "\n",
+    "* Created following this [PyTorch tutorial](https://pytorch.org/tutorials/intermediate/char_rnn_classification_tutorial)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Create the RNN model.***"
    ]
   },
   {
@@ -3160,6 +3166,13 @@
     "n_langs = len(all_langs)\n",
     "n_hidden = 128\n",
     "rnn = RNN(n_letters, n_hidden, n_langs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Example test of RNN.***"
    ]
   },
   {
@@ -3209,6 +3222,13 @@
     "\n",
     "# Classification of above example\n",
     "lang_from_output(output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Create a random sample of words and their borrowed language for training the model***"
    ]
   },
   {
@@ -3481,7 +3501,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***[explanation of significance of loss tracking results]***"
+    "***This graph represents the loss (difference in predictions of the model vs actual label) overtime of the model. The graph shows a clear downward trend showing that loss is decreasing overtime and that the model is learning effectively from the training data.***"
    ]
   },
   {
@@ -3559,7 +3579,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***[explanation of significance of confusion matrix]***"
+    "***The confusion matrix above represents how well our model performed. The rows represent the true label and the columns represent our models predicted label. We would like to focus on the diagonal lines as those tell us how well it predicted each language family. The color being darker shows a lower accuracy and a brighter color tells us it had higher accuracy for the given language family. Through this we can see that Japonic had a very high accuracy, while Semitic and Hellenic had moderately high prediction scores. Sanskrit and Germanic had pretty low scores showing the model is not very accurate at classifying those two language families which could point to a certain property of those two language families messing up our model. Japonic having a signficantly higher accuracy score could also tell us that our model heavily favors that language family and could also be a reason for certain innacuracies and misclassifications.***"
    ]
   },
   {
@@ -3597,7 +3617,7 @@
    "source": [
     "**Conclusion of ML for lanuage family prediction**\n",
     "\n",
-    "[conclusion here]"
+    "The 0.852 shows us that 85.2% of our iterations of our model correctly predicted the language family. This tells us that our model is accurate in it's classification of a word's language family, but could also be due to more words from better learned language families being used in the evaluation which would require further testing. "
    ]
   },
   {
@@ -4248,6 +4268,23 @@
     "**Conclusion of ML for lanuage region prediction**\n",
     "\n",
     "[conclusion here]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Resources for further learning:\n",
+    "\n",
+    "[Etymology](https://en.wikipedia.org/wiki/Etymology) <br> <br>\n",
+    "[Data Processing](https://www.geeksforgeeks.org/introduction-to-data-processing/) <br> <br>\n",
+    "[Hypothesis Testing Information](https://www.cuemath.com/data/hypothesis-testing/) <br> <br>\n",
+    "[Statistical Methods](https://www.stratascratch.com/blog/commonly-used-statistical-tests-in-data-science/) <br> <br>\n",
+    "[Machine Learning Pipeline](https://www.simplilearn.com/tutorials/machine-learning-tutorial/machine-learning-steps) <br> <br>\n",
+    "[General Machine Learning Information](https://mitsloan.mit.edu/ideas-made-to-matter/machine-learning-explained) <br> <br>\n",
+    "[Machine Learning Methods](https://towardsdatascience.com/10-machine-learning-methods-that-every-data-scientist-should-know-3cc96e0eeee9) <br> <br>\n",
+    "[Neural Networks](https://online.nyit.edu/blog/neural-networks-101-understanding-the-basics-of-key-ai-technology) \n",
+    "\n"
    ]
   }
  ],
