Finish ML pt2; Added conclusion

--- a/cmsc320-etymology-project.ipynb
+++ b/cmsc320-etymology-project.ipynb
@@ -3626,7 +3626,15 @@
    "source": [
     "***Part Two of Machine Learning Analysis: Language Region Prediction***\n",
     "\n",
-    "[provide explanation for this section similar to that of the one at the start of part one of Machine Learning Analysis, including a problem statement and the outline of steps for analysis. For each step, give an explanation at the appropriate point in the below code sections as with part one]"
+    "**Problem**: Create a model that can predict which geographical region a word originates from based on its characters. This is an alternative approach to the language family prediction from part one of the machine learning analysis, instead looking at broader geographical patterns rather than purely linguistic relationships. \n",
+    "\n",
+    "By grouping languages by region (Europe, Asia, Africa, Middle East, Central America), we can potentially identify patterns in word formation that are related to certain areas of the world. This helps us explore whether nearby languages develop similar word patterns regardless of their language family.\n",
+    "\n",
+    "**Analysis Steps**:\n",
+    "1. Encode the terms (features) and regional classifications (targets)\n",
+    "2. Group languages into geographical regions\n",
+    "4. Train a Recurrent Neural Network model\n",
+    "5. Visualization"
    ]
   },
   {
@@ -3641,6 +3649,13 @@
     "\n",
     "\n",
     "etymology = pd.read_csv('etymology.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We start by defining a character encoding system that can handle the letters, including special characters, from the necessary regional linguistics"
    ]
   },
   {
@@ -3723,6 +3738,13 @@
     "    return tensor\n",
     "\n",
     "print(lineToTensor('jones').size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then implement the LinguisticRegions class which organizes languages into geographical groups."
    ]
   },
   {
@@ -3854,6 +3876,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we begin data preprocessing, which is more selective in this section than part one due to regional prediction requiring more standardized input to detect meaningful patterns."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -3925,6 +3954,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The RNN model architecture in we implement here is similar to part one with small modifications for regional prediction."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -3987,6 +4023,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To handle the imbalanced nature of the regional data (Europe having many more examples than Central America), we implement a weighted sampling strategy:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -4036,6 +4079,13 @@
     "for i in range(10):\n",
     "    category, line, category_tensor, line_tensor = randomTrainingExample()\n",
     "    print('related term region =', category, '/ word =', line)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The training process runs for 20,000 iterations, with regular loss tracking."
    ]
   },
   {
@@ -4159,6 +4209,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our loss plot visualizes how the model improves its predictions over time, starting at around 1.45 the loss represents the model's initial large error rate in predicting region origins. The steep decline following these first few thousand iterations implies rapid learning as the model discovers basic patterns.\n",
+    "\n",
+    "The curve levels off at approximately 0.9 about halfway through, indicating the model has learned the most obvious patterns and/or any remaining error likely comes from inherent overlap in regional patterns, data imbalance (as mentioned with the larger amount of European data), or general ambiguity in word origins.\n",
+    "\n",
+    "The plateau is a bit high (at 0.9) suggesting significant uncertainty in regional prediction from word struction alone, which makes sense given how languages influence each other across geographical boundaries as societies interact."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -4267,7 +4328,38 @@
    "source": [
     "**Conclusion of ML for lanuage region prediction**\n",
     "\n",
-    "[conclusion here]"
+    "The final results and visualizations of this section suggest that despite the loss plateau not being as low as would be preferred, the rest of the data, particularly our confusion matrix, does suggest the model achieves meaningful prediction rates above random chance. This suggests further that regional patterns do exist in word formation, as was expected."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Overall Conclusions\n",
+    "\n",
+    "The problem of understanding and predicting word origins through etymology is complex and multifaceted. While our analysis cannot fully capture the intricate nature of language evolution, our analysis of etymologies has revealed several insights into how languages interact and influence each other, and how one goes about studying language data.\n",
+    "\n",
+    "Our etymology dataset contained features directly tied to word origins and relationships between languages. Word frequency and relationship types served as key metrics for understanding how commonly words are used and how they relate to other languages. Through exploratory data analysis we discovered several significant patterns:\n",
+    "\n",
+    "Language Relationship Patterns:\n",
+    "* Word frequency showed a weak but statistically significant correlation with the number of etymological relationships.\n",
+    "* High-frequency words did not show significantly different language origin patterns from low-frequency words.\n",
+    "* Relationship types were distinctly non-uniform, with some types like \"borrowed_from\" being dramatically more common.\n",
+    "\n",
+    "Machine Learning Applications:\n",
+    "* Language family prediction achieved 85.2% accuracy in our iterations, demonstrating that character-based patterns can effectively predict word origins.\n",
+    "* Regional prediction showed promise but highlighted the complexity of geographical language interactions.\n",
+    "* The difference in plateau levels for loss between the language family and language region models reflect the greater challenge in identifying regional versus linguistic family patterns in words.\n",
+    "\n",
+    "While our analysis provides valuable insights, it also raises interesting questions for further research:\n",
+    "* What makes certain language families harder to predict than others?\n",
+    "* What historical phenomenon could influence language patterns to make cross-regional classification more distinct in some crossovers than others?\n",
+    "* How might part of speech play into regional distinction?\n",
+    "\n",
+    "Future work might focus on:\n",
+    "* Incorporating temporal data to track changes in borrowing patterns over time.\n",
+    "* Analyzing semantic shifts alongside phonetic changes.\n",
+    "* Developing more sophisticated models that can account for multiple possible etymology paths."
    ]
   },
   {
